--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = public
 	url = https://github.com/almina-orange/almina-orange.github.io
 	branch = master
+[submodule "themes/introduction"]
+	path = themes/introduction
+	url = https://github.com/victoriadrake/hugo-theme-introduction.git
