--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
 baseURL = "http://almina-orange.github.io/"
 languageCode = "en-us"
 title = "My New Hugo Site"
-theme = "ananke"
+# theme = "ananke"
+theme = "introduction"
